--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tsparticles/slim": "^3.3.0",
     "@uploadcare/blocks": "0.36.0",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.20",
